--- a/haitidata/templates/tutorials.html
+++ b/haitidata/templates/tutorials.html
@@ -7,30 +7,48 @@
 {% block body_outer %}
 <div class="row">
   <div class="col-md-8">
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu." %}</p>
-    <h2>{% trans "Platform overview" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
-    <h2>{% trans "Search filters" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
-    <h2>{% trans "Ship and Clip" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
+    <p>{% trans "Cette page contient une série de tutoriels pour illustrer les principales caractéristiques de HaitiData" %}.</p>
+    <h2>{% trans "Présentation de la plateforme" %}</h2>
+    <p>{% trans "Aperçu de toutes les principales fonctionnalités de HaitiData" %}.</p>
+    <hr>
+    <h2>{% trans "Filtres de recherche" %}</h2>
+    <p>{% trans "Illustration des principaux critères de filtrage pour une leur utilisation optimale" %}.</p>
+    <hr>
+    <h2>{% trans "Couper et Livrer" %}</h2>
+    <p>{% trans "Instructions étape par étape pour télécharger une partie de l’orthophoto ou du MNT" %}.</p>
     <div class="embed-responsive embed-responsive-16by9">
       <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6pcCoOYe0uY" frameborder="0" allowfullscreen></iframe>
     </div>
-    <h2>{% trans "Sharing layers and metadata" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
-    <h2>{% trans "Uploading files from Android ODK" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
-    <h2>{% trans "Styling layers" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
-    <h2>{% trans "Graphs" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
-    <h2>{% trans "Creating maps" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
-    <h2>{% trans "Managing users" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
+    <hr>
+    <h2>{% trans "Partager couches et métadonnées" %}</h2>
+    <p>{% trans "Comment gérer les privilèges d'accès et utiliser divers objets dans HaitiData" %}.</p>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xku8-K995_M" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <hr>
+    <h2>{% trans "Téléchargement de fichiers depuis Android ODK" %}</h2>
+    <p>{% trans "Procédure de chargement et de transformation des fichiers ODK en couche ponctuelle." %}</p>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Wx3-QeqF63A" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <hr>
+    <h2>{% trans "Symboliser les couches" %}</h2>
+    <p>{% trans "Instructions pour changer le style de représentation d’une couche." %}</p>
+    <hr>
+    <h2>{% trans "Graphiques" %}</h2>
+    <p>{% trans "Comment créer des graphiques à partir d’une couche vectorielle." %}</p>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BkQANF6DNhg" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <hr>
+    <h2>{% trans "Créer des cartes" %}</h2>
+    <p>{% trans "Procédure de création d’une carte et de gestion des ses métadonnées et privilèges." %}</p>
+    <hr>
+    <h2>{% trans "Gestion des utilisateurs" %}</h2>
+    <p>{% trans "Comment gérer les utilisateurs, les groupes et les privilèges." %}</p>
+    <hr>
     <h2>{% trans "Rancher" %}</h2>
-    <p>{% trans "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." %}</p>
+    <p>{% trans "La géstion de Rancher." %}</p>
   </div>
 </div>
 {% endblock %}
