if quantity is null, category count is the only aggregation possible --> form controls

--- a/haitidata/templates/layers/layer_detail.html
+++ b/haitidata/templates/layers/layer_detail.html
@@ -668,7 +668,14 @@
           }
       }
 
+      function check_quantity(){
+          if (document.f.quantity.value == ''){
+                  document.f.aggr_type.value = 2;
+              }
+      }
+        
       function updateLinkAndTitle(){
+          check_quantity();
           update_link();
           chart_title();
           attachAbstract();
